src/test/ui/type/type-dependent-def-issue-49241.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/type-dependent-def-issue-49241.rs:3:22
   |
LL |     const l: usize = v.count();
   |                      ^ non-constant value

error[E0080]: evaluation of constant value failed
  --> $DIR/type-dependent-def-issue-49241.rs:4:18
   |
LL |     let s: [u32; l] = v.into_iter().collect();
   |                  ^ referenced constant has errors

error: aborting due to 2 previous errors

Some errors occurred: E0080, E0435.
For more information about an error, try `rustc --explain E0080`.
